# ftools-rs

./: .gitignore  Cargo.toml  Gemfile  test-cucu.sh
docs/: readme.md  todo
features/: ftls.feature  ftrename.feature  ftrename.feature!depr  ftstd.feature
features/media/dates/: gen_all_dates.sh
features/media/other/: iphone11_gps.HEIC
features/media/tags/: gen_all_tags.sh
features/step_definitions/: ftools_steps.rb
features/support/: readme-test.md
src/: lib.rs  tag.rs
src/media_file/: jpg.rs  mod.rs  unsupported.rs
tests/: cucu.cmd  cucu.sh  rename.sh  undo.sh
