[package]
name = "ftools"
description = "A set of tools helps to Keep Your Media Files In Order"
version = "0.1.0"
authors = ["Andrew Bizyaev (aka ANB)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    clap = { version = "3.1.6", features = ["derive"] }
    glob = "0.3.0"