[package]
name = "ftools"
description = "A set of tools helps to Keep Your Media Files In Order"
version = "0.1.0"
authors = ["Andrew Bizyaev (aka ANB)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    clap = { version = "3.1", features = ["derive"] }
    glob = "0.3"
    log = "0.4"
    env_logger = "0.9"
    regex = "1.5"
    atty = "0.2"