[package]
name = "ftools"
description = "A set of tools helps to Keep Your Media Files In Order"
version = "1.0.0-beta.1"
authors = ["Andrew Bizyaev <andrew.bizyaev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    clap = { version = "4.0", features = ["derive"] }
    glob = "0.3"
    log = "0.4"
    env_logger = "0"
    regex = "1.5"
    atty = "0.2"
    anyhow = "1.0"
    quickexif = "0.1"
    chrono = "0.4"
    serde_json = "1.0"
